# BaiduCar

./: README.md
Code/car_ws/: must
Code/car_ws/devel/: .catkin  local_setup.sh
Code/car_ws/src/hg_bringup/: CMakeLists.txt  package.xml
Code/car_ws/src/image_ros_msgs/: CMakeLists.txt
Code/car_ws/src/test/: conf-0.2.run  (+3 more)
Code/car_ws/src/test/PPDeliveryProjects/: .goutputstream-LPSD11  CMakeLists.txt  Demo.py  README.md  Yolov3CarAPI.py  color_adjustment.py  control.py  cpp_demo_detection.cc  follow.py  infer_demo_batch.py  motion_control.py  pid.py  video.py  y3run.py  yolov3_run.py  yolov3_run_test.py  yolov3run_readme.txt
Code/car_ws/src/test/PPDeliveryProjects/baidu_car0413/: config.json  deploy_paddle.params  deploy_paddle.ro  io_paddle.json
Code/car_ws/src/test/PPDeliveryProjects/sencond/: control.py  pid.py  yolov3_run_test.py
Code/robot_control/: setup.py
Code/robot_control/Rosrobot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
DataProcessing/VOCPictures/: data211.xml  data223.xml  data234.xml  data281.xml  data387.xml  data418.xml  data48.xml
DataProcessing/data/: split_train_val.py
DataProcessing/data/annotations/: data126.xml  data149.xml  data159.xml  data198.xml  data268.xml  data303.xml  data316.xml  data329.xml  data354.xml  data76.xml
DataProcessing/data/img_lab/: test.txt  train.txt  val.txt
DataProcessing/labelImg/: labelImg.py
DataProcessing/labelImg/data/: predefined_classes.txt
DataProcessing/labelImg/labelImg.egg-info/: PKG-INFO  SOURCES.txt
DataProcessing/labelImg/libs/: resources.py  yolo_io.py
Document/: Python.md
(+62 files in other folders)
